# Multi-Robot-Search

./: README.md
examples/graphclear/outputs/: ran_graph_0_.txt  ran_graph_1_.txt
examples/graphclearlegacy/: graph.txt  graph_strat.txt
maps/: default.yaml  freiburg.ini  freiburg.launch  freiburg.ose  freiburg.pos  freiburg.ppm  freiburg.tiff  freiburg.yaml  freiburg_mask.geotag  freiburg_mask.tiff  geotag.sh  rectangular_environment.ct  rectangular_environment.geotag  rectangular_environment.ose  rectangular_environment.ppm  rectangular_environment.tif  rectangular_environment.yaml  simple_environment.ini  simple_environment.launch  simple_environment.ppm  simple_environment.tif  simple_environment.yaml  test_map.ini  test_map.ppm  test_map.psd  test_map.tif  test_map.yaml  ucm_map.ini  ucm_map.ose  ucm_map.ppm  ucm_map.tiff  ucm_map.yaml
modules/: CMakeLists.txt
modules/agents/: CMakeLists.txt
modules/agents/src/: agentstate.cpp
modules/graphclear/: CMakeLists.txt
modules/graphclear/src/: cut.cpp  cut_sequence.cpp  surveillance_graph.cpp  test_surv_graph.cxx
modules/graphclear_legacy/: CMakeLists.txt  README  makefile  makefile.base  makefile.maps  makefile.strategies
modules/graphclear_legacy/base/: .depend  br_pose.cpp  br_pose.h  sg_graph.cpp
modules/graphclear_legacy/cfg/: surv_robot.cfg
modules/graphclear_legacy/include/: CGAL_types.h  VoronoiDiagramGenerator.h  define.h  sg_edge.h  sg_graph.h  sg_label_computer.h  sg_map.h  sg_strategy.h  sg_vertex.h
modules/graphclear_legacy/maps/: .depend  main.arch  sg_map.cpp  sg_map_point.cpp  wave_point.cpp
modules/graphclear_legacy/src/: br_pose.cpp  sg_graph.cpp  sg_label_computer.cpp  sg_map.cpp  sg_map_point.cpp  sg_strategy.cpp  strategy_test.cpp  wave_point.cpp
modules/graphclear_legacy/strategies/: .depend  sg_label_computer.cpp  sg_strategy.cpp  strategy_test.cpp
modules/graphconstruction/: CMakeLists.txt
modules/graphconstruction/src/: graphconstruction.cpp
modules/gui/: CMakeLists.txt  option_widget.ui  viewer_interface.ui
modules/gui/src/: animator.cpp  glHelpers.cpp  jpegImage.cpp  jpeg_codec.cpp  main.cpp  main.cxx  memdata_mgr.cpp  terrain.cpp  viewer.cpp
modules/heightmap/: CMakeLists.txt
modules/heightmap/pts2vrml/: Makefile  main.cpp  pts2vrml.pro
modules/heightmap/src/: geomap.cpp  heightMapClassifier.cpp  heightcell.cpp  heightmap.cpp  hmabstraction.cpp  perimeter.cpp  scan3d.cpp  visibility.cpp  visibility_helpers.cpp
modules/heightmap/vrml2hm/: Makefile  main.cpp  makeMap.sh  vrml2hm.pro
modules/heightmap/vrml2rts/: Makefile  main.cpp  vrml2rts.pro
modules/hungarian/: CMakeLists.txt
modules/hungarian/munkres/: main.cpp
modules/hungarian/src/: hungarian2.cpp  main.cpp  munkres.cpp
modules/include/agents/: agentstate.h
modules/include/graphclear/: cut.h  cut_sequence.h  define.h  sg_typedefs.h  surveillance_graph.h  svg_edge.h  svg_edge.h.orig  svg_graph.h  svg_graph.h.orig  svg_label_computer.h  svg_label_computer.h.orig  svg_neighbor.h  svg_neighbor.h.orig  svg_strategy.h  svg_strategy.h.orig  svg_vertex.h  svg_vertex.h.orig
modules/include/graphclear_legacy/: CGAL_types.h  define.h  sg_edge.h  sg_graph.h  sg_label_computer.h  sg_map.h  sg_map_point.h  sg_neighbor.h  sg_strategy.h  sg_vertex.h  wave_point.h
modules/include/graphconstruction/: graphconstruction.h  img_stream.h
modules/include/gui/: animator.h  glHelpers.h  jpegImage.h  jpeg_codec.h  memdata_mgr.h  terrain.h  viewer.h  viewerstructs.h
modules/include/heightmap/: geomap.h  heightMapClassifier.h  heightcell.h  heightmap.h  hmabstraction.h  perimeter.h  scan3d.h  visibility.h  visibility_helpers.h
modules/include/hungarian/: hungarian2.h
modules/include/hungarian/munkres/: matrix.h  munkres.h
modules/include/lineclear/: CGALTypes.h  ChoiceSet.h  ChoiceTree.h  CostOracle.h  Cut.h  CutSequence.h  Environment.h  Gui.h  LineClearGraph.h  ObstacleSequence.h  ObstacleSequenceStep.h  SurveillanceGraph.h  SurveillanceGraphNode.h
modules/include/planner/: aStarNode.h  aStarSearch.h  hungarian.h  planningCell.h  planningMap.h  priorityQueue.h
modules/include/polygonization/: alpha_shape.h  dp_line_simplification.h  geometry_types.h  geometry_util.h  polygon.h  polygon_environment.h  polygonization.h  segment_visibility_graph.h  visilibity.hpp  voronoi_diagram.h
modules/include/uavmodel/: navpoint.h
modules/include/utilities/: Yaml_Config.h  angles.h  filesysTools.h  gpsconvert.h  misc.h  paramfile.h  statistics.h  stringutils.h  timeutil.h  timing.h
modules/include/utilities/math/: bresenham.h  matrix.h  matrix3d.h  vector.h  vector2.h  vector3.h  vector3d.h  vector4.h
modules/lineclear/: CMakeLists.txt
modules/lineclear/src/: ChoiceSet.cpp  ChoiceTree.cpp  Cut.cpp  CutSequence.cpp  Environment.cpp  Experiments.cxx  ExperimentsLoader.cxx  Gui.cpp  Gui_main.cpp  Gui_main.cxx  ShortestPaths.cpp.temp  SurveillanceGraph.cpp  main.cpp  main.cxx  testcase.cpp.temp
modules/planner/: CMakeLists.txt
modules/planner/src/: aStarNode.cpp  aStarSearch.cpp  hungarian.cpp  planningCell.cpp  planningMap.cpp  priorityQueue.cpp
modules/polygonization/: CMakeLists.txt
modules/polygonization/src/: alpha_shape.cpp  dp_line_simplification.cpp  geometry_util.cpp  main.cpp  polygon.cpp  polygon_environment.cpp  polygonization.cpp  segment_visibility_graph.cpp  visilibity.cpp  voronoi_diagram.cpp
modules/uavmodel/: CMakeLists.txt
modules/uavmodel/src/: main.cxx  navpoint.cpp
modules/utilities/: CMakeLists.txt
modules/utilities/src/: Yaml_Config.cpp  angles.cpp  bresenham.cpp  filesysTools.cpp  gpsconvert.cpp  matrix.c  matrix3d.cpp  misc.c  paramfile.cpp  timeutil.cpp  timing.cpp  vector3d.cpp
scripts/: R_analysis_PE_linesearch.R
